--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/line-clamp": "^0.2.0",
+    "tailwindcss": "^2.1.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,6 +13,7 @@
     "apexcharts": "^3.27.1",
     "moment": "^2.29.1",
     "postcss": "^8.2.15",
+    "postcss-cli": "^8.3.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-beautiful-dnd": "^10.1.1",
@@ -26,7 +28,7 @@
   },
   "scripts": {
     "start": "npm run watch:css && react-scripts start",
-    "build": "npm postcss watch:css && react-scripts build",
+    "build": "npm run watch:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "watch:css": "postcss src/assets/css/tailwind.css -o src/assets/css/main.css"
