--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "react-transition-group": "^4.4.2",
     "use-undo": "^1.0.5",
     "web-vitals": "^1.0.1",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "autoprefixer": "^10.2.5",
+    "luxon": "^1.27.0",
+    "react-live-clock": "^5.2.0"
+
   },
   "scripts": {
     "start": "npm run watch:css && react-scripts start",
